# coral-reef

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  _GENERATE_VC10_X64.bat
cmake/: FindNuget.cmake  (+4 more)
src/: CMakeLists.txt  Channel.cpp  Channel.h  ClientNode.cpp  ClientNode.h  ClientProxy.cpp  Connection.cpp  Connection.h  Decoder-.cpp  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  Event.pb.cpp  Event.pb.h  Event.proto  IChannel.h  Invoker.cpp  LocalObjectProxy.cpp  Message.h  Message.pb.cpp  Message.pb.h  Message.proto  MessageEncoder.cpp  MessageEncoder.h  MessageUtils.cpp  MessageUtils.h  ModulePart.cpp  Networking.h  Node.cpp  Node.h  Protocol.cpp  Protocol.h  Proxy.cpp  Proxy.h  RemoteObject.cpp  RemoteObject.h  RemoteObjectProxy.cpp  Servant.cpp  Servant.h  (+11 more)
src/dso/: CMakeLists.txt  ClientSpace.cpp  ServerSpace.cpp
src/flow/: CMakeLists.txt  ClientSpace.cpp  ServerSpace.cpp  ServiceIdMap.cpp  SpacePublisher.cpp  SpaceSubscriber.cpp
src/network/: Connection.cpp  Connection.h  ConnectionServer.cpp  ConnectionServer.h  Transport.cpp  Transport.h  ZMQTransport.cpp  ZMQTransport.h
src/reef/: CMakeLists.txt  ClientProxy.h  Marshaller.h  Message.pb.h  Node.cpp
src/reef/rpc/: BarrierManager.cpp  BarrierManager.h  CMakeLists.txt  ClientProxy.cpp  ClientProxy.h  ClientRequestHandler.cpp  ClientRequestHandler.h  Demarshaller.cpp  Demarshaller.h  InstanceContainer.cpp  InstanceContainer.h  InstanceManager.cpp  InstanceManager.h  Invoker.cpp  Invoker.h  LeaseManager.cpp  LeaseManager.h  LifecycleManager.cpp  LifecycleManager.h  Marshaller.cpp  Marshaller.h  Message.pb.cpp  Message.pb.h  Message.proto  ModulePart.cpp  Node.cpp  Node.h  Requestor.cpp  Requestor.h  RequestorCache.cpp  RequestorCache.h  RequestorManager.cpp  RequestorManager.h  Server.cpp  Server.h  ServerRequestHandler.cpp  ServerRequestHandler.h  Unmarshaller.cpp  Unmarshaller.h
src/rpc/: AnyArrayUtil.h  BarrierManager.cpp  BarrierManager.h  CMakeLists.txt  ClientProxy.cpp  ClientProxy.h  ClientRequestHandler.cpp  ClientRequestHandler.h  Demarshaller.cpp  Demarshaller.h  InstanceContainer.cpp  InstanceContainer.h  InstanceManager.cpp  InstanceManager.h  Invoker.cpp  Invoker.h  LeaseManager.cpp  LeaseManager.h  Marshaller.cpp  Marshaller.h  Message.pb.cc  Message.pb.cpp  Message.pb.h  Message.proto  ModulePart.cpp  NetworkNode.cpp  Node.cpp  Node.h  Requestor.cpp  Requestor.h  RequestorManager.cpp  RequestorManager.h  ServerRequestHandler.cpp  ServerRequestHandler.h  Timer.cpp  Timer.h
src/zmq/: CMakeLists.txt  ZMQAcceptor.h  ZMQActiveLink.cpp  ZMQActiveLink.h  ZMQConnector.cpp  ZMQConnector.h  ZMQPassiveLink.cpp  ZMQPassiveLink.h  ZMQTransport.cpp  ZMQTransport.h
tests/: CMakeLists.txt  valgrind.supp
tests/modules/dom/: CaModel_dom.lua  Company.csl  Employee.csl  ICompany.csl  IEmployee.csl  IProduct.csl  IProject.csl  IService.csl  Product.csl  Service.csl
tests/modules/mockReef/: ActiveLink.lua  FakeLink.csl  ITestSetup.csl  ITransportConfig.csl  PassiveLink.lua  TestSetup.csl  TestSetup.lua  Transport.csl  Transport.lua
tests/modules/moduleA/: IGrandParent.csl  IRefParent.csl  IRefTypeA.csl  IReferenceTypes.csl  ISimpleParent.csl  ISimpleTypes.csl  StringNativeClass.csl
tests/modules/rpcTests/: ChildStruct.csl  FakeLink.lua  IComplexTypes.csl  ISimpleTypes.csl  ITestSetup.csl  Incrementer.csl  StringNativeClass.csl  TestSetup.csl  TestSetup.lua
tests/modules/stubs/: DummyEnum.csl  FakeLink.csl  FakeLink.lua  IComplexTypes.csl  IIncrementer.csl  IRefParent.csl  IReferenceTypes.csl  ISimpleParent.csl  ISimpleTypes.csl  Incrementer.csl  MotherStruct.csl  StringNativeClass.csl  TestComponent.csl  TestSetup.csl  TestSetup.lua
tests/modules/testModule/: ChildStruct.csl  IRefTypeB.csl  IReferenceTypes.csl  MotherStruct.csl  StringNativeClass.csl
tests/modules/testTransport/: ActiveLink.csl  ActiveLink.lua  FakeLink.csl  FakeLink.lua  IFakeLink.csl  PassiveLink.csl  PassiveLink.lua  Transport.csl  Transport.lua
tests/modules/toto/: IToto.csl  Toto.csl
tests/src/: CMakeLists.txt
tests/src/clientTests/: CMakeLists.txt  SmokeTests.cpp  clientMain.cpp
tests/src/dom/: CMakeLists.txt  Company.cpp  Employee.cpp  Product.cpp  Service.cpp
tests/src/flowTests/: CMakeLists.txt
tests/src/flowTests/dom/: CMakeLists.txt  Company.cpp  Employee.cpp  Product.cpp  Service.cpp
tests/src/integrationTests/: CMakeLists.txt  ParameterTests.cpp  ServantRemovalTests.cpp  SmokeTests.cpp  clientMain.cpp
tests/src/luaTests/: CMakeLists.txt  PublishingTests.lua  RefParameterTests.lua  RemoteRefCountingTests.lua
tests/src/manual_client/: BarrierTests.cpp  CMakeLists.txt  SmokeTests.cpp
tests/src/manual_server/: CMakeLists.txt  barrierTestsServerMain.cpp  serverMain.cpp
tests/src/mockReef/: CMakeLists.txt
tests/src/moduleA/: CMakeLists.txt  StringNativeClass.cpp  TestComponent.cpp
tests/src/replicaTests/: CMakeLists.txt  CompanySpace.cpp  CompanySpace.h  ReplicaTests.cpp
tests/src/rpcIntegrationTests/: CMakeLists.txt  ErrorTests.cpp  ParameterTests.cpp  PublishingTests.lua  RefParameterTests.lua  RemoteRefCountingTests.lua  ServantRemovalTests.cpp
tests/src/rpcTests/: CMakeLists.txt  Incrementer.cpp  StringNativeClass.cpp  TestComponent.cpp
tests/src/rpcUnitTests/: CMakeLists.txt  ClientTests.cpp  CodecTests.cpp  Main.cpp  ServerTests.cpp  __EmptyBooststrap.cpp
tests/src/serverTests/: CMakeLists.txt  serverMain.cpp
tests/src/testModule/: CMakeLists.txt  StringNativeClass.cpp  TestComponent.cpp
tests/src/testTransport/: ActiveLink.cpp  ActiveLink.h  CMakeLists.txt  PassiveLink.cpp  PassiveLink.h  Transport.cpp  Transport.h
tests/src/tests/: BasicTests.cpp  CMakeLists.txt  ClientTests.cpp  CodecTests.cpp  CompleteTests.cpp  Connection.cpp  FakeNet.cpp  FakeSocket.cpp  FakeSocket.h  LocalObjectProxyTests.cpp  Main.cpp  ProxyTests.cpp  RemObjTestChannel.cpp  RemObjTestChannel.h  ServerTests.cpp  __EmptyBooststrap.cpp
tests/src/toto/: CMakeLists.txt  Toto.cpp
tests/src/unitTests/: CMakeLists.txt  ClientTests.cpp  CodecTests.cpp  Main.cpp  ServerTests.cpp  __EmptyBooststrap.cpp
(+112 files in other folders)
